syntax = "proto3";

package fy.blog.v1;

import "google/protobuf/timestamp.proto";

option go_package = "pkg.fy.science/proto/blog/v1;pbblogv1";

message Author {
  string author_id = 1;
  string name = 2;
  string bio = 3;
  string profile_image = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message BlogPost {
  string post_id = 1;
  string path = 2;
  string author_id = 3;
  repeated string tags = 4;
  string description = 5;
  string body = 6;
  string title = 7;
  string featured_image = 8;
  google.protobuf.Timestamp published_time = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  bool show_featured_image = 12;
  bool published = 13;
}

message Event {
  string event_id = 1;
  optional string slug = 2;
  string author_id = 3;
  repeated string tags = 4;
  string description = 5;
  string body = 6;
  string title = 7;
  string featured_image = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  bool published = 11;
  google.protobuf.Timestamp start_date = 12;
  google.protobuf.Timestamp end_date = 13;
  string location = 14;
  Questionairre questionairre = 15;
  uint32 max_subscriptions = 16;
  bool subscriptions_opened = 17;
  bool reserved_only_to_members = 18;
  string external_registration_link = 19;
  repeated string invitation_codes = 20;
}

message Questionairre {
  repeated Question questions = 1;
}

message Question {
  string cuid = 1;
  string description = 2;
  string type = 3;
  repeated string options = 4;
  bool required = 5;
}

message EventTicket {
  string ticket_id = 1;
  string event_id = 2;
  string token = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  string avatar = 7;
  string role = 8;
  uint32 ticket_num = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  map<string, string> answers = 12;
  optional google.protobuf.Timestamp privacy_signed = 13;
  optional google.protobuf.Timestamp confirmed = 14;
  optional google.protobuf.Timestamp recording_consensus = 15;
}